@@ -28,13 +28,13 @@ public class DefaultDomainScoreComputerTest {
 	@Test
 	public void findDomainTest() throws DomainCouldNotBeDetectedException {
 		final IDomainScoreComputer<String> computer = new DefaultDomainScoreComputer();
-		assertEquals(new Double(1.0), computer.getDomainScore("test", "test"));
+		assertEquals(Double.valueOf(0.0), computer.getDomainScore("test", "test"));
 	}
 
 	@Test
 	public void cantFindDomainTest() throws DomainCouldNotBeDetectedException {
 		final IDomainScoreComputer<String> computer = new DefaultDomainScoreComputer();
-		assertEquals(new Double(0.0), computer.getDomainScore("some description", "test"));
+		assertEquals(Double.valueOf(0.0), computer.getDomainScore("some description", "test"));
 	}
 
 	@Test
